--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+/*------------------------------------------------------------------
+
+[Table of contents]
+1. Global CSS
+2. Header / Menu CSS
+3. Home Section CSS 
+4. Service Section CSS
+5. About Section CSS
+6. Portfolio Section CSS
+    6.1 Pretty Photo CSS
+7. Blog Section CSS
+8. Skills Section CSS
+9. Contact Section CSS
+10. Single Blog / Post Page CSS
+11. Responsive CSS
+
+-------------------------------------------------------------------*/
+
+
 /* ===================================
     1. Global CSS
 ====================================== */
@@ -36,12 +55,12 @@ a {
 }
 
 a:hover {
-    color: #fa7d29;
+    color: #f44647;
 }
 
 .section a {
     font-weight: 700;
-    color: #fda737;
+    color: #f44647;
 }
 
 .section a:hover {
@@ -225,7 +244,7 @@ img.block-right {
 
 .nav-container .site-title:hover:before {
     width: 0;
-    background-color: #ffad6b;
+    background-color: #f44647;
 }
 
 .nav-btn {
@@ -343,7 +362,7 @@ img.block-right {
 
 #home .entry-title {
     position: absolute;
-    color: #f3a734;
+    color: #f44647;
     font-weight: 800;
     font-size: 140px;
     line-height: 143px;
@@ -399,7 +418,7 @@ img.block-right {
 }
 
 .serv-link-cover {
-    background-color: #f1b877;
+    background-color: #f44647;
     display: flex;
     align-items: center;
     padding: 50px 70px;
@@ -481,11 +500,10 @@ img.block-right {
 }
 
 .about-info {
-    background-color: #f5aa47;
+    background-color: #f44647;
     color: #fff;
-    width: 330px;
+    width: 80vh;
     padding: 50px 30px 50px 70px;
-    float: right;
     margin: 0 0 40px 65px;
 }
 
@@ -537,7 +555,7 @@ img.block-right {
 }
 
 .grid {
-    width: 100%;    
+    width: 90vh;    
     position: relative;
     display: block;
     overflow: hidden;
@@ -552,7 +570,7 @@ img.block-right {
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
     overflow: hidden;    
-    width: 50%;
+    width: 90vh;
     transition: opacity .3s;
 }
 
@@ -560,8 +578,8 @@ img.block-right {
     display: block;
     width: 100%;
     height: auto;
-    max-height: none;
-    max-width: none;    
+    max-width: none;
+    max-width: none;
 }
 
 .grid-sizer,
@@ -660,7 +678,7 @@ img.block-right {
     width: 70px;
     height: 70px;
     display: inline-block;
-    background-color: #f7b423;
+    background-color: #f44647;
     margin-bottom: 20px;
     background-size: 70px;
     transition: all 0.3s ease;
@@ -712,7 +730,7 @@ img.block-right {
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
-    background-color: #f19f32;
+    background-color: #f44647;
 }
 
 
@@ -804,11 +822,60 @@ div.pp_default .pp_description {
 
 
 /* ===================================
+    7. Blog Section CSS
+====================================== */
+
+.home-blog-list {
+    padding-right: 41px;
+}
+
+.home-blog-list li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+    min-height: 136px;
+}
+
+.home-blog-list li:last-child {
+    padding-bottom: 0;
+}
+
+.home-blog-list li + li {
+    border-top: 2px solid #fff;
+}
+
+.home-blog-list li a {
+    font-size: 26px;
+    margin-right: 30px;
+    color: #000;
+}
+
+.home-blog-list li a:hover {
+    color: #f44647;
+}
+
+.home-blog-list li .blog-list-info {
+    flex: 0 0 auto;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 14px;
+    letter-spacing: 3px;
+    min-width: 100px;
+}
+
+.home-blog-list li .blog-list-info .category {
+    color: #f44647;
+    margin-top: 6px;
+}
+
+
+/* ===================================
     8. Skills Section CSS
 ====================================== */
 
 .skills-history {
-    background-color: #f89c24;
+    background-color: #f44647;
     color: #fff;
     margin-top: 41px;
     padding: 63px 60px 62px 94px;
@@ -896,7 +963,7 @@ div.pp_default .pp_description {
 .skills-progress .skill-fill {
     width: 10%;
     height: 10px;
-    background-color: #ee921a;
+    background-color: #f44647;
     transition: width .7s;
 }
 
