--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 *::selection {
-    background: #fff0f0;
+    background: white;
 }
 
 body {
@@ -21,7 +21,7 @@ body {
     min-width: 320px;
     position: relative;
     overflow-x: hidden;
-    background: linear-gradient(to right, #fff0f0 0%, #fff0f0 60%, white 60%);
+    background: linear-gradient(to right, white 0%, white 60%, white 60%);
     background-position: center;
 }
 
@@ -31,7 +31,7 @@ p {
 
 a {
     text-decoration: none;
-    color: #000;
+    color: white;
     transition: .35s ease-out;
 }
 
@@ -55,7 +55,7 @@ a:hover {
     width: 100%;
     height: 100%;
     z-index: 99999;
-    background-color: #fff;
+    background-color: white;
 }
 
 .block-right {
@@ -81,7 +81,7 @@ img.block-right {
 .page-wrapper {
     pointer-events: auto;
     width: 100%;
-    background-color: #fff0f0;
+    background-color: white;
     max-width: 800px;
 }
 
@@ -120,6 +120,7 @@ img.block-right {
 ====================================== */
 
 .s-nav {
+    background-color: #242526;
     position: fixed;
     right: 0;
     top: 0;
@@ -139,6 +140,7 @@ img.block-right {
 }
 
 .nav-count > div {
+    color: white;
     position: relative;
     display: inline-block;
     vertical-align: top;
@@ -203,6 +205,7 @@ img.block-right {
 }
 
 .nav-container .site-title {
+    color: white;
     font-size: 12px;
     line-height: 30px;
     letter-spacing: 5px;
@@ -220,7 +223,7 @@ img.block-right {
     height: 2px;
     width: calc(100% - 5px);
     transition: .35s ease-out;
-    background-color: #000000;
+    background-color: white;
 }
 
 .nav-container .site-title:hover:before {
@@ -237,7 +240,8 @@ img.block-right {
     transition: .15s ease;
     cursor: pointer;
     z-index: 10;
-    background-color: #fff;
+    color: white;
+    background-color: #242526;
 }
 
 .nav-btn.scroll-bottom {
@@ -281,7 +285,7 @@ img.block-right {
     transition: all 0.25s;
     margin-left: 0;
     top: 8px;
-    background-color: #000;
+    background-color: white;
 }
 
 .nav-btn .nav-btn-cover:after, 
@@ -296,7 +300,7 @@ img.block-right {
     -webkit-transition: all 0.25s;
     transition: all 0.25s;
     top: 8px;
-    background-color: #000;
+    background-color: white;
 }
 
 .nav-btn .nav-btn-cover:before {
@@ -411,7 +415,7 @@ img.block-right {
 }
 
 .serv-link-cover a {
-    color: #fff;
+    color: white;
     font-weight: 700;
     font-size: 12px;
     line-height: 30px;
@@ -428,7 +432,7 @@ img.block-right {
     height: 2px;
     width: 100%;
     transition: .35s ease-out;
-    background-color: #fff;
+    background-color: white;
 }
 
 .serv-link-cover a:hover:before {
@@ -477,7 +481,7 @@ img.block-right {
 
 .about-info {
     background-color: #f44647;
-    color: #fff;
+    color: white;
     width: 80vh;
     padding: 50px 30px 50px 70px;
     margin-right: 10vh;
@@ -509,10 +513,6 @@ img.block-right {
 
 .about-text p {
     max-width: 670px;
-}
-
-.signature {
-    margin-top: 10px;
 }
 
 
@@ -796,56 +796,6 @@ div.pp_default .pp_description {
     font-weight: 400;
 }
 
-
-/* ===================================
-    7. Blog Section CSS
-====================================== */
-
-.home-blog-list {
-    padding-right: 41px;
-}
-
-.home-blog-list li {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 0;
-    min-height: 136px;
-}
-
-.home-blog-list li:last-child {
-    padding-bottom: 0;
-}
-
-.home-blog-list li + li {
-    border-top: 2px solid #fff;
-}
-
-.home-blog-list li a {
-    font-size: 26px;
-    margin-right: 30px;
-    color: #000;
-}
-
-.home-blog-list li a:hover {
-    color: #f44647;
-}
-
-.home-blog-list li .blog-list-info {
-    flex: 0 0 auto;
-    font-weight: 700;
-    font-size: 10px;
-    line-height: 14px;
-    letter-spacing: 3px;
-    min-width: 100px;
-}
-
-.home-blog-list li .blog-list-info .category {
-    color: #f44647;
-    margin-top: 6px;
-}
-
-
 /* ===================================
     8. Skills Section CSS
 ====================================== */
@@ -865,223 +815,8 @@ div.pp_default .pp_description {
     transition: width .7s;
 }
 
-
 /* ===================================
-    9. Contact Section CSS
-====================================== */
-
-.contact-form {
-    margin-top: 40px;
-    background-color: #f44647;
-}
-
-.contact-form * {
-    overflow: hidden;
-}
-
-.contact-form p {
-    margin-bottom: 0;
-}
-
-.contact-form input[type=text], 
-.contact-form input[type=email], 
-.contact-form textarea {
-    font-family: 'Poppins', sans-serif;
-    font-size: 12px;
-    line-height: 25px;
-    letter-spacing: 3px;
-    color: #000;
-    background-color: transparent;
-    border: 0;
-    border-bottom: 2px solid;
-    padding-top: 13px;
-    padding-bottom: 0px;
-    padding-left: 0;
-    margin: 10px 0;
-    height: 28px;
-    width: 100%;
-    box-sizing: initial;
-}
-
-.contact-form input[name="your-name"] {
-    margin-top: 0;
-    padding-top: 0;
-}
-
-.contact-form textarea {
-    height: 150px;
-}
-
-p.contact-submit-holder {
-    margin-top: 30px;
-    margin-bottom: 0 !important;
-}
-
-.contact-form input[type=submit] {
-    display: inline-block;
-    border: 2px solid;
-    text-align: center;
-    padding: 20px 0px;
-    font-size: 14px;
-    cursor: pointer;
-    vertical-align: middle;
-    text-decoration: none;
-    background-color: transparent;
-    color: #000;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    width: 100%;
-    letter-spacing: 8px;
-    transition: opacity .3s ease;
-    cursor: pointer;
-}
-
-.contact-form input[type=submit]:hover {
-    opacity: 0.8;
-}
-
-.contact-form input[type=text]::-webkit-input-placeholder, 
-.contact-form input[type=email]::-webkit-input-placeholder, 
-.contact-form textarea::-webkit-input-placeholder {
-    font-family: 'Poppins', sans-serif;
-    color: #000;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 25px;    
-    opacity: 1;  
-}
-
-.contact-form input[type=text]:-ms-input-placeholder, 
-.contact-form input[type=email]:-ms-input-placeholder, 
-.contact-form textarea:-ms-input-placeholder {
-    font-family: 'Poppins', sans-serif;
-    color: #000;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 25px;    
-    opacity: 1;  
-}
-
-.contact-form input[type=text]::placeholder, 
-.contact-form input[type=email]::placeholder, 
-.contact-form textarea::placeholder {
-    font-family: 'Poppins', sans-serif;
-    color: #000;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 25px;
-    opacity: 1;    
-}
-
-
-/* ===================================
-    10. Single Blog / Post Page CSS
-====================================== */
-
-.single-blog .entry-title {    
-    font-size: 32px;
-    line-height: 35px;
-    margin-bottom: 32px;
-}
-
-.single-blog .meta {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 30px;
-}
-
-.single-blog .meta li {    
-    font-weight: 700;
-    font-size: 10px;
-    line-height: 14px;
-    letter-spacing: 3px;
-}
-
-.single-blog .meta li + li {
-    margin-left: 25px;
-}
-
-.single-blog .meta li a {
-    color: #f44647;
-}
-
-.single-blog .meta li a:hover {
-    color: #000000;
-}
-
-.single-blog .thumbnail-img {
-    position: relative;
-    margin-bottom: 40px;
-}
-
-.single-blog .thumbnail-img:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background: rgba(244, 70, 71, 0.04);
-}
-
-.single-blog .thumbnail-img img {
-    display: block;
-    width: 100%;
-}
-
-.single-blog .content-670 blockquote {
-    float: right;
-    background: #f44647;
-    color: #fff;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 30px;
-    padding: 40px 55px 50px;
-    width: 330px;
-    margin: 5px 0 30px 18px;
-}
-
-.single-blog .content-670 blockquote p {
-    margin: 0;
-}
-
-.single-blog .content-670 blockquote img {
-    margin-bottom: 27px;
-}
-
-.single-blog .soc-list {
-    margin-top: 60px;
-}
-
-.soc-list {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-.soc-list li {
-    margin-right: 25px;
-}
-
-.soc-list li:last-child {
-    margin-right: 0;
-}
-
-.soc-list li a {
-    color: #000;
-    font-size: 12px;
-    line-height: 30px;
-    letter-spacing: 5px;
-}
-
-.soc-list li a:hover {
-    color: #f44647;
-}
-
-
-/* ===================================
-    11. Responsive CSS
+    9. Responsive CSS
 ====================================== */
 
 @media (max-width: 1366px) {
@@ -1153,7 +888,7 @@ p.contact-submit-holder {
         right: auto;
         left: -100%;
         pointer-events: none;
-        background-color: #fff;
+        background-color: #242526;
         max-width: 300px;
         width: 100%;
         z-index: 9;
@@ -1227,7 +962,7 @@ p.contact-submit-holder {
 @media (max-width: 1020px) {
 
     body {
-        background: #fff0f0;
+        background: white;
     }
 
 }
