--- a/style.css
+++ b/style.css
@@ -36,12 +36,12 @@ a {
 }
 
 a:hover {
-    color: #f44647;
+    color: #f27f0c;
 }
 
 .section a {
     font-weight: 700;
-    color: #f44647;
+    color: #f27f0c;
 }
 
 .section a:hover {
@@ -153,7 +153,7 @@ img.block-right {
     left: 0;
     top: 0;
     position: absolute;
-    color: #f44647;
+    color: #f27f0c;
 }
 
 .nav-count .pagination-sep {
@@ -171,7 +171,7 @@ img.block-right {
 }
 
 .nav-list li.current a {
-    color: #f44647;
+    color: #f27f0c;
 }
 
 .nav-list li ul {
@@ -227,7 +227,7 @@ img.block-right {
 
 .nav-container .site-title:hover:before {
     width: 0;
-    background-color: #f44647;
+    background-color: #f27f0c;
 }
 
 .nav-btn {
@@ -346,7 +346,7 @@ img.block-right {
 
 #home .entry-title {
     position: absolute;
-    color: #f44647;
+    color: #f27f0c;
     font-weight: 800;
     font-size: 140px;
     line-height: 143px;
@@ -402,7 +402,7 @@ img.block-right {
 }
 
 .serv-link-cover {
-    background-color: #f44647;
+    background-color: #f27f0c;
     display: flex;
     align-items: center;
     padding: 50px 70px;
@@ -483,7 +483,7 @@ img.block-right {
 }
 
 .about-info {
-    background-color: #f44647;
+    background-color: #f27f0c;
     color: white;
     width: 80vh;
     padding: 50px 30px 50px 70px;
@@ -657,7 +657,7 @@ img.block-right {
     width: 70px;
     height: 70px;
     display: inline-block;
-    background-color: #f44647;
+    background-color: #f27f0c;
     margin-bottom: 20px;
     background-size: 70px;
     transition: all 0.3s ease;
@@ -709,7 +709,7 @@ img.block-right {
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
-    background-color: #f44647;
+    background-color: #f27f0c;
 }
 
 
@@ -808,13 +808,14 @@ div.pp_default .pp_description {
     grid-template-columns: repeat(4, 20vh);
     column-gap: 10px;
     row-gap: 15px;
-    margin-left: 5vh;
+    align-items: center;
+    justify-items: center;
 }
 
 .skill-fill {
     width: 10%;
     height: 10px;
-    background-color: #f44647;
+    background-color: #f27f0c;
     transition: width .7s;
 }
 
