--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ img.block-right {
     font-size: 26px;
     line-height: 150%;
     letter-spacing: 5px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .section {
@@ -518,6 +518,10 @@ img.block-right {
     max-width: 670px;
 }
 
+.soc{
+    display: flex;
+    gap: 10px;
+}
 
 /* ===================================
     6. Portfolio Section CSS
